--- a/TouringSpotApp/Controller/Base.lproj/TouringSpotList.storyboard
+++ b/TouringSpotApp/Controller/Base.lproj/TouringSpotList.storyboard
@@ -15,9 +15,28 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="HDe-kF-1tO">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="x1U-6Q-9cU"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="tWH-7x-ymJ"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="HDe-kF-1tO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2HC-Di-g59"/>
+                            <constraint firstItem="HDe-kF-1tO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="QSm-hk-2LO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="HDe-kF-1tO" secondAttribute="bottom" id="ooB-eY-A5N"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HDe-kF-1tO" secondAttribute="trailing" id="ugs-SE-PZg"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="HDe-kF-1tO" id="5ny-Xz-dd9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
