--- a/TouringSpotApp/View/DetailViewController.xib
+++ b/TouringSpotApp/View/DetailViewController.xib
@@ -10,18 +10,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailViewController" customModule="TouringSpotApp" customModuleProvider="target">
             <connections>
                 <outlet property="addressLabel" destination="Vk1-8Y-b1B" id="oaT-rX-9dG"/>
-                <outlet property="imageView" destination="Whu-Zo-Rg5" id="95B-c0-pi9"/>
                 <outlet property="nameLabel" destination="XkZ-c9-bQn" id="ZVp-7A-6f3"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="381" height="261"/>
+            <rect key="frame" x="0.0" y="0.0" width="381" height="109"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="I3Q-D4-C4C">
-                    <rect key="frame" x="10" y="10" width="361" height="241"/>
+                    <rect key="frame" x="10" y="10" width="361" height="89"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2GH-fZ-WVN" userLabel="Spacer">
                             <rect key="frame" x="0.0" y="0.0" width="361" height="10"/>
@@ -65,20 +64,8 @@
                                 <constraint firstAttribute="height" constant="60" id="wa3-RH-dKW"/>
                             </constraints>
                         </stackView>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Whu-Zo-Rg5">
-                            <rect key="frame" x="0.0" y="70" width="361" height="150"/>
-                            <color key="backgroundColor" systemColor="systemOrangeColor"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="150" id="oC2-yT-Ce0"/>
-                            </constraints>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                    <integer key="value" value="10"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
-                        </imageView>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TMf-7C-hIq" userLabel="Spacer">
-                            <rect key="frame" x="0.0" y="220" width="361" height="21"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OCg-h6-a1f" userLabel="Spacer">
+                            <rect key="frame" x="0.0" y="70" width="361" height="19"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
                     </subviews>
@@ -94,15 +81,12 @@
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="113.768115942029" y="53.90625"/>
+            <point key="canvasLocation" x="113.768115942029" y="3.0133928571428572"/>
         </view>
     </objects>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
