--- a/TouringSpotApp/View/DetailViewController.xib
+++ b/TouringSpotApp/View/DetailViewController.xib
@@ -9,79 +9,60 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailViewController" customModule="TouringSpotApp" customModuleProvider="target">
             <connections>
-                <outlet property="addressLabel" destination="Vk1-8Y-b1B" id="oaT-rX-9dG"/>
-                <outlet property="nameLabel" destination="XkZ-c9-bQn" id="ZVp-7A-6f3"/>
+                <outlet property="imageView" destination="MWv-qj-Nzh" id="nbz-GO-PoQ"/>
+                <outlet property="nameLabel" destination="mC9-1O-IZk" id="qY5-Th-sGl"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="381" height="109"/>
+            <rect key="frame" x="0.0" y="0.0" width="381" height="180"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="I3Q-D4-C4C">
-                    <rect key="frame" x="10" y="10" width="361" height="89"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qqC-3v-xt0">
+                    <rect key="frame" x="10" y="20" width="361" height="150"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2GH-fZ-WVN" userLabel="Spacer">
-                            <rect key="frame" x="0.0" y="0.0" width="361" height="10"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="10" id="TsV-BO-QgJ"/>
-                            </constraints>
-                        </view>
-                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s5b-We-0w6">
-                            <rect key="frame" x="0.0" y="10" width="361" height="60"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G9e-1C-CDp">
+                            <rect key="frame" x="0.0" y="0.0" width="361" height="30"/>
                             <subviews>
-                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="DXE-s8-gYx">
-                                    <rect key="frame" x="0.0" y="0.0" width="321" height="60"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XkZ-c9-bQn">
-                                            <rect key="frame" x="0.0" y="0.0" width="321" height="30"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="30" id="r6r-8x-P3d"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vk1-8Y-b1B">
-                                            <rect key="frame" x="0.0" y="30" width="321" height="30"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </stackView>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vC7-P5-ZUO">
-                                    <rect key="frame" x="321" y="0.0" width="40" height="60"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mC9-1O-IZk">
+                                    <rect key="frame" x="0.0" y="0.0" width="301" height="30"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3U9-Ie-LFe">
+                                    <rect key="frame" x="301" y="0.0" width="60" height="30"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="40" id="dPv-I0-PDh"/>
+                                        <constraint firstAttribute="width" constant="60" id="bTG-vC-hCz"/>
                                     </constraints>
-                                    <buttonConfiguration key="configuration" style="plain"/>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 </button>
                             </subviews>
                             <constraints>
-                                <constraint firstAttribute="height" constant="60" id="wa3-RH-dKW"/>
+                                <constraint firstAttribute="height" constant="30" id="vVn-dq-cNI"/>
                             </constraints>
                         </stackView>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OCg-h6-a1f" userLabel="Spacer">
-                            <rect key="frame" x="0.0" y="70" width="361" height="19"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        </view>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MWv-qj-Nzh">
+                            <rect key="frame" x="0.0" y="40" width="361" height="110"/>
+                            <constraints>
+                                <constraint firstAttribute="height" priority="999" constant="120" id="Ubg-7L-OLi"/>
+                            </constraints>
+                        </imageView>
                     </subviews>
                 </stackView>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="I3Q-D4-C4C" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="cGX-ci-o85"/>
-                <constraint firstItem="I3Q-D4-C4C" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="10" id="gMK-dL-g27"/>
-                <constraint firstAttribute="trailing" secondItem="I3Q-D4-C4C" secondAttribute="trailing" constant="10" id="i9h-NQ-6e4"/>
-                <constraint firstAttribute="bottom" secondItem="I3Q-D4-C4C" secondAttribute="bottom" constant="10" id="rbD-Gr-Sqs"/>
+                <constraint firstAttribute="bottom" secondItem="qqC-3v-xt0" secondAttribute="bottom" constant="10" id="UhB-aR-nIf"/>
+                <constraint firstItem="qqC-3v-xt0" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="WOL-JO-VND"/>
+                <constraint firstAttribute="trailing" secondItem="qqC-3v-xt0" secondAttribute="trailing" constant="10" id="d9B-Qe-DeM"/>
+                <constraint firstItem="qqC-3v-xt0" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="kUb-15-lqQ"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="113.768115942029" y="3.0133928571428572"/>
+            <point key="canvasLocation" x="113.768115942029" y="-11.71875"/>
         </view>
     </objects>
     <resources>
