--- a/TouringSpotApp/View/DetailViewController.xib
+++ b/TouringSpotApp/View/DetailViewController.xib
@@ -16,11 +16,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="381" height="180"/>
+            <rect key="frame" x="0.0" y="0.0" width="381" height="279"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qqC-3v-xt0">
-                    <rect key="frame" x="10" y="20" width="361" height="150"/>
+                    <rect key="frame" x="10" y="20" width="361" height="249"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G9e-1C-CDp">
                             <rect key="frame" x="0.0" y="0.0" width="361" height="30"/>
@@ -43,12 +43,16 @@
                                 <constraint firstAttribute="height" constant="30" id="vVn-dq-cNI"/>
                             </constraints>
                         </stackView>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MWv-qj-Nzh">
-                            <rect key="frame" x="0.0" y="40" width="361" height="110"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MWv-qj-Nzh">
+                            <rect key="frame" x="0.0" y="40" width="361" height="180"/>
                             <constraints>
-                                <constraint firstAttribute="height" priority="999" constant="120" id="Ubg-7L-OLi"/>
+                                <constraint firstAttribute="height" constant="180" id="Ubg-7L-OLi"/>
                             </constraints>
                         </imageView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hRG-yx-0vJ">
+                            <rect key="frame" x="0.0" y="230" width="361" height="19"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        </view>
                     </subviews>
                 </stackView>
             </subviews>
@@ -62,7 +66,7 @@
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="113.768115942029" y="-11.71875"/>
+            <point key="canvasLocation" x="-818.11594202898561" y="65.959821428571431"/>
         </view>
     </objects>
     <resources>
